Viktor Crest profile card

--- a/profile_card_ispravka-1.html
+++ b/profile_card_ispravka-1.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 
-    <title>Profile card</title>
+    <title>Viktor Crest - Profile Card</title>
 <meta charset="UTF-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="HandheldFriendly" content="true">
   <!-- displays site properly based on user's device -->
 
   <link rel="stylesheet" href="style.css">
   <link href="https://https://fonts.google.com/specimen/Kumbh+Sans:wght@200;700;800&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
   
 </head>
 <!-- Body will have the background image (via CSS) -->
